--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@ html lang="eng">
         <div class="movie_text col-lg-9 col-md-9 col-sm-9 col-xs-12">
             <h5 class="text-success text-left text-capitalize">This is the food of central India
             </h5>
-            <p>Cuisine of Central Zone of India consists of both sweet and salty dishes. In some regions people take wheat and meat as their staple diet, but in other regions rice and fish is more common. Indore, the capital of Madhya Pradesh, offers the best of of the food of this zone and is quite popular amongst foodies. Some beverages as Thandai with milk and nuts, Kababs: their are types of kababs present here such as Shami Kabab, And sweets such as Peda which is mouth watering food known as mithai in hindi.</p>
-        </div>
+            <p>  A sedan is a bodystyle wherein a car has three distinct compartments for the engine, passengers, and the cargo. It can be distinguished from hatchbacks by the protruding trunk which can be opened up to storage luggage.
     </div>
 
     <!--2nd Achievement--->
@@ -124,7 +123,7 @@ html lang="eng">
         </div>
 
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
-            <h5 class="text-left text-success text-capitalize">This is North Indain food.
+            <h5 class="text-left text-success text-capitalize"> Sedan car.
             </h5>
             <p>A hatchback is a car body configuration with a rear door that swings upward to provide access to a cargo area. Hatchbacks may feature fold-down second row seating, where the interior can be reconfigured to prioritize passenger or cargo volume. Hatchbacks may feature two- or three-box design. </p>
         </div>
