--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ html lang="eng">
         </div>
 
         <div class="movie_text col-lg-9 col-md-9 col-sm-9 col-xs-12">
-            <h5 class="text-success text-left text-capitalize">This is the food of central India
+            <h5 class="text-success text-left text-capitalize">Sedan.
             </h5>
             <p>  A sedan is a bodystyle wherein a car has three distinct compartments for the engine, passengers, and the cargo. It can be distinguished from hatchbacks by the protruding trunk which can be opened up to storage luggage.
     </div>
@@ -123,7 +123,7 @@ html lang="eng">
         </div>
 
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
-            <h5 class="text-left text-success text-capitalize"> Sedan car.
+            <h5 class="text-left text-success text-capitalize"> Hatchback.
             </h5>
             <p>A hatchback is a car body configuration with a rear door that swings upward to provide access to a cargo area. Hatchbacks may feature fold-down second row seating, where the interior can be reconfigured to prioritize passenger or cargo volume. Hatchbacks may feature two- or three-box design. </p>
         </div>
