--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ html lang="eng">
         </div>
 
         <div class="movie_text col-lg-9 col-md-9 col-sm-9 col-xs-12">
-            <h5 class="text-success text-left text-capitalize">Sedan.
+            <h5 class="text-success text-left text-capitalize">Sedan
             </h5>
             <p>  A sedan is a bodystyle wherein a car has three distinct compartments for the engine, passengers, and the cargo. It can be distinguished from hatchbacks by the protruding trunk which can be opened up to storage luggage.
     </div>
